A lot of work on the mobile api and bug fixes